--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is my repo for urxvt perl extensions
+
+I don't use urxvt anymore, but feel free to use these modules if you have a need for them.
